--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: malf.templates
 Type: Package
 Title: Template Images for Multi-Atlas Label Fusion ('MALF')
-Version: 0.2.2
-Date: 2017-02-15
+Version: 0.3
+Date: 2017-02-24
 Author: John Muschelli
 Maintainer: John Muschelli <muschellij2@gmail.com>
 Description: Data set of 'NIfTI' images with corresponding labels for 
@@ -16,3 +16,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 URL: http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
