Package id 15 stable

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,10 +5,8 @@
 README\.md
 inst/demographics.xlsx
 inst/MICCAI-Challenge-2012-Label-Information.xlsx
-
 inst/extdata/make_brains\.R
 ^appveyor\.yml$
-
-
-
-
+^DESCRIPTION\.bak$
+^\./\.travis\.yml\.bak$
+^\./appveyor\.yml\.bak$
