--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 URL: http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page
-Suggests: knitr,    rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    covr
 VignetteBuilder: knitr
 biocViews:
-
