--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,18 +5,23 @@ Version: 0.3.1
 Date: 2017-02-24
 Author: John Muschelli
 Maintainer: John Muschelli <muschellij2@gmail.com>
-Description: Data set of 'NIfTI' images with corresponding labels for 
-    multi-atlas labeling and label fusion of magnetic resonance images ('MRI').
-    These images are from the 'MICCAI' 2012 Grand Challenge and 
-    Workshop on Multi-Atlas Labeling 
-    <http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page>.
-    Primarily used for T1-weighted imaging.
+Description: Data set of 'NIfTI' images with corresponding labels for
+        multi-atlas labeling and label fusion of magnetic resonance
+        images ('MRI'). These images are from the 'MICCAI' 2012 Grand
+        Challenge and Workshop on Multi-Atlas Labeling
+        <http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page>.
+        Primarily used for T1-weighted imaging.
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
-URL: http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page
+URL:
+        http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page
 BugReports: https://github.com/muschellij2/malf.templates/issues
-Suggests: knitr,
-    rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    covr,
+    testthat
 VignetteBuilder: knitr
+biocViews: 
