--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,6 @@ RoxygenNote: 6.0.1.9000
 URL:
         http://masiweb.vuse.vanderbilt.edu/workshop2012/index.php/Main_Page
 BugReports: https://github.com/muschellij2/malf.templates/issues
-Suggests: 
-    knitr,
-    rmarkdown,
-    covr,
-    testthat
+Suggests: knitr, rmarkdown, covr, testthat
 VignetteBuilder: knitr
-biocViews: 
+biocViews:
